# synology_photo_sort

./: LICENSE  README.rst  pyproject.toml
ibidem/synology_photo_sort/: api.py  main.py  photo_station.py  settings.py
