[tool.poetry]
name = "synology-photo-sort"
version = "0.1.0"
description = "Sorts images based on available metadata into subfolders for each year using the Synology PhotoStation API"
readme = "README.rst"
authors = ["Morten Lied Johansen <mortenjo@ifi.uio.no>"]
license = "MIT"
packages = [
    { include = "ibidem" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
requests = "^2"
requests-toolbelt = "^1.0.0"
fiaas-logging = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
pytest-sugar = "^0.9"

[tool.poetry.scripts]
synology-photo-sort = "ibidem.synology_photo_sort.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
